--- a/app/src/main/res/layout/news_channel_holder.xml
+++ b/app/src/main/res/layout/news_channel_holder.xml
@@ -1,20 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    >
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayoutCompat"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/newsChannelHolderChannel"
-        android:layout_width="wrap_content"
+        android:id="@+id/newsChannelName"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/channel_name" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:text="@string/channel_name"
+        android:textAppearance="?attr/textAppearanceHeadline6"
+        app:layout_constraintBottom_toTopOf="@+id/newsChannelLatestUpdate"
+        app:layout_constraintEnd_toStartOf="@+id/newChannelBrakingNews"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
         android:id="@+id/newsChannelLatestUpdate"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/latest_update"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/newChannelBrakingNews"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/newsChannelName" />
+
+    <ImageView
+        android:id="@+id/newChannelBrakingNews"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/latest_update"
-        />
-</androidx.appcompat.widget.LinearLayoutCompat>
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.347"
+        app:srcCompat="@drawable/ic_braking_news" />
+</androidx.constraintlayout.widget.ConstraintLayout>
