--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_newsChannelFragment_to_newsFragment"
             app:destination="@id/newsFragment" />
+        <action
+            android:id="@+id/action_newsChannelFragment_to_connectFragment"
+            app:destination="@id/connectFragment" />
     </fragment>
     <fragment
         android:id="@+id/newsFragment"
@@ -23,4 +26,9 @@
             android:name="newsChannel"
             app:argType="string" />
     </fragment>
+    <dialog
+        android:id="@+id/connectFragment"
+        android:name="com.madeThisUp.alienNews.fragments.ConnectFragment"
+        android:label="fragment_connect"
+        tools:layout="@layout/fragment_connect" />
 </navigation>
