--- a/app/src/main/res/layout/connection_settings_dialog.xml
+++ b/app/src/main/res/layout/connection_settings_dialog.xml
@@ -10,7 +10,7 @@
         android:background="#4BE84B"
         android:contentDescription="@string/app_name" />
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/url"
         android:inputType="text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
