--- a/app/src/main/res/menu/connection_menu.xml
+++ b/app/src/main/res/menu/connection_menu.xml
@@ -4,18 +4,18 @@
     >
     <item
         android:id="@+id/connection_settings"
-        android:title="connection settings"
+        android:title="@string/connection_settings"
         android:icon="@drawable/ic_no_settings"
         app:showAsAction="always"
         >
         <menu>
             <item
                 android:id="@+id/connection_connect"
-                android:title="Connect"
+                android:title="@string/connect_server"
                 />
             <item
                 android:id="@+id/connection_disconnect"
-                android:title="Disconnect"
+                android:title="@string/disconnect"
                 />
         </menu>
     </item>
