--- a/app/src/main/res/layout/connection_settings_dialog.xml
+++ b/app/src/main/res/layout/connection_settings_dialog.xml
@@ -10,15 +10,15 @@
         android:background="#4BE84B"
         android:contentDescription="@string/app_name" />
     <EditText
-        android:id="@+id/alienUrl"
-        android:inputType="textUri"
+        android:id="@+id/username"
+        android:inputType="text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
-        android:hint="@string/server_url" />
+        android:hint="@string/username" />
     <EditText
         android:id="@+id/password"
         android:inputType="textPassword"
