--- a/app/src/main/res/layout/news_channel_holder.xml
+++ b/app/src/main/res/layout/news_channel_holder.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayoutCompat"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="3dp"
+    android:background="@color/recyclerViewItem">
 
     <LinearLayout
         android:id="@+id/newsChannelLinearLayout"
@@ -16,18 +18,18 @@
         app:layout_constraintEnd_toStartOf="@+id/newChannelBrakingNews"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        >
-    <TextView
-        android:id="@+id/newsChannelName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:textAppearance="?attr/textAppearanceHeadline6"
-        android:textSize="20sp"
-        tools:text="Mars"
-        />
+        app:layout_constraintVertical_chainStyle="packed">
+
+        <TextView
+            android:id="@+id/newsChannelName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
+            android:textAppearance="?attr/textAppearanceHeadline6"
+            android:textColor="@color/recyclerViewItemTextColor"
+            android:textSize="20sp"
+            tools:text="Mars" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -36,17 +38,19 @@
             android:layout_marginTop="4dp"
             android:text="-"
             android:textAppearance="?attr/textAppearanceHeadline6"
+            android:textColor="@color/recyclerViewItemTextColor"
             tools:text="-" />
+
         <TextView
             android:id="@+id/newsChannelHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
-            android:textSize="16sp"
             android:textAppearance="?attr/textAppearanceHeadline6"
-            tools:text="Aliens attack"
-            />
+            android:textColor="@color/recyclerViewItemTextColor"
+            android:textSize="16sp"
+            tools:text="Aliens attack" />
 
 
     </LinearLayout>
@@ -57,6 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:textColor="@color/recyclerViewItemUpdateDateColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/newChannelBrakingNews"
         app:layout_constraintHorizontal_bias="0.026"
