--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,9 @@
     <color name="light_blue_A200">#FF40C4FF</color>
     <color name="light_blue_A400">#FF00B0FF</color>
     <color name="black_overlay">#66000000</color>
+
+    <color name="recyclerViewBackground">#1B1A1A</color>
+    <color name="recyclerViewItem">#2C2929</color>
+    <color name="recyclerViewItemTextColor">#F1E5E5</color>
+    <color name="recyclerViewItemUpdateDateColor">#BADACBCB</color>
 </resources>
