chore: more design cleaning

--- a/app/src/main/res/layout/news_text_content_holder.xml
+++ b/app/src/main/res/layout/news_text_content_holder.xml
@@ -12,6 +12,7 @@
         android:id="@+id/newsHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
         android:textAppearance="?attr/textAppearanceHeadline6"
         android:textColor="@color/recyclerViewItemTextColor"
         android:textSize="26sp"
@@ -27,6 +28,7 @@
         android:id="@+id/newsDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:textColor="@color/recyclerViewItemUpdateDateColor"
         android:textSize="12sp"
@@ -38,31 +40,42 @@
         android:id="@+id/newsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
         android:textAppearance="?attr/textAppearanceHeadline5"
         android:textColor="@color/recyclerViewItemTextColor"
         android:textSize="18sp"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintBottom_toTopOf="@+id/newsAllImages"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/newsDate"
+        app:layout_constraintVertical_bias="0.0"
         tools:text="Ipsum larem" />
 
     <ImageView
         android:id="@+id/newsMainImage"
-        android:layout_width="136dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="116dp"
+        android:layout_width="92dp"
+        android:layout_height="95dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/newsHeader"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.905"
+        app:layout_constraintStart_toEndOf="@+id/newsText"
+        app:layout_constraintTop_toBottomOf="@+id/newsHeader"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/newsAllImages"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/all_news_images"
         android:textColor="#00CBFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/newsText" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
