--- a/app/src/main/res/layout/news_text_content_holder.xml
+++ b/app/src/main/res/layout/news_text_content_holder.xml
@@ -13,6 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
+        android:layout_marginEnd="6dp"
         android:textAppearance="?attr/textAppearanceHeadline6"
         android:textColor="@color/recyclerViewItemTextColor"
         android:textSize="26sp"
@@ -40,14 +41,16 @@
         android:id="@+id/newsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="6dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="20dp"
         android:textAppearance="?attr/textAppearanceHeadline5"
+
         android:textColor="@color/recyclerViewItemTextColor"
         android:textSize="18sp"
         app:layout_constrainedWidth="true"
-        app:layout_constraintBottom_toTopOf="@+id/newsAllImages"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,23 +62,25 @@
         android:id="@+id/newsMainImage"
         android:layout_width="92dp"
         android:layout_height="95dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.905"
-        app:layout_constraintStart_toEndOf="@+id/newsText"
-        app:layout_constraintTop_toBottomOf="@+id/newsHeader"
+        app:layout_constraintHorizontal_bias="0.018"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/newsText"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/newsAllImages"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="6dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="15dp"
         android:layout_marginBottom="10dp"
         android:text="@string/all_news_images"
         android:textColor="#00CBFF"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/newsMainImage"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
